fix del and wallet